Lint small fixes